Fixed spacing of transbox

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -50,6 +50,7 @@ div.transbox
 .container
 {
   display: flex;
+  max-width: inherit;
 }
 .show
 {
